Make the JMSDestination knonw to properties for SOAP/JMS specification.